<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral30"
    tools:context=".FirstFragment">


        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:hint="@string/TPOIDClientID"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:textSize="25dp"
            android:background="@drawable/edittext_shape"
            android:id="@+id/et_1"  />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:layout_below="@+id/et_1"
            android:hint="@string/LOGINKEY"
            android:textSize="25dp"
            android:id="@+id/et_2"
            android:background="@drawable/edittext_shape" />




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/et_2">

                <Button
                    android:id="@+id/button_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="?android:attr/colorFocusedHighlight"
                    android:layout_toRightOf="@id/button_second"
                    android:layout_marginTop="55dp"
                    android:text="@string/Register" />

                <Button
                    android:id="@+id/button_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="55dp"
                    android:backgroundTint="?android:attr/colorFocusedHighlight"
                    android:text="@string/Login" />
        </RelativeLayout>



        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            />



</RelativeLayout>
