<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral30"
    tools:context=".SecondFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/RollNo"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="number"
            android:textSize="25dp"
            android:background="@drawable/edittext_shape"
            android:id="@+id/et_3"  />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:textSize="25dp"
            android:background="@drawable/edittext_shape"
            android:id="@+id/et_4"  />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Branch"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:textSize="25dp"
            android:background="@drawable/edittext_shape"
            android:id="@+id/et_5"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Branch"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:textSize="25dp"
            android:background="@drawable/edittext_shape"
            android:id="@+id/et_6"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/YearofPassed"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="date"
            android:textSize="25dp"
            android:background="@drawable/edittext_shape"
            android:id="@+id/et_7"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placed"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:textSize="25dp"
            android:background="@drawable/edittext_shape"
            android:id="@+id/et_8"/>


        <Button
            android:id="@+id/button_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_marginLeft="140dp"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/Registered"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.547"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="200dp"
            android:padding="20dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:id="@+id/rb1"
                android:text="M"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:id="@+id/rb2"
                android:text="F"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb3"
                android:textSize="25dp"
                android:layout_toRightOf="@id/"
                android:text="T"/>

        </RadioGroup>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="REGISTER YOURSELF HERE"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/holo_green_light"
        android:textSize="30dp"
        />


</RelativeLayout>
